2017-11-19  Bruno Haible  <bruno@clisp.org>

	Fix a crash if KERNELVOID32_HEAPCODES && SPVW_PAGES && DEBUG_SPVW.
	* spvw_global.d (check_gc_consistency): Take varobjects_misaligned
	into account.
	* spvw_global_old.d: Likewise.

2017-11-19  Bruno Haible  <bruno@clisp.org>

	Remove support for M88000 processors.
	* lispbibl.d (M88000): Remove definition. Don't test for M88000.
	* intlog.d (integerlength32): Remove special optimization for M88000.
	* makemake.in (XCFLAGS): Remove special handling of m88k, convex CPUs.

2017-11-19  Bruno Haible  <bruno@clisp.org>

	Remove support for VAX processors.
	It was never actually used or tested.
	* lispbibl.d (VAX): Remove definition. Don't test for VAX.
	* arilev0.d: Don't test for VAX.
	* arilev1.d: Likewise.
	* arivaxunix.d: Remove file.

2017-11-18  Bruno Haible  <bruno@clisp.org>

	Fix initialization of modules in SINGLEMAP_MEMORY model.
	Reported by Jean Louis <bugs@gnu.support>
	at <https://sourceforge.net/p/clisp/bugs/713/>.
	* utils/modprep.lisp (print-tables-2): Emit statements that store the
	keyword vectors of the SUBRs in their heap-allocated location, not in
	their preliminary location.
	* spvw.d (init_subr_tab_1): Set module->stab also if the module has no
	SUBRs. (Just a no-op.)

2017-11-18  Bruno Haible  <bruno@clisp.org>

	Allow clisp! scripts to have file names with spaces.
	* _clisp.c: Don't split argv[1] if it looks like a file name.

2017-11-18  Bruno Haible  <bruno@clisp.org>

	Allow UTF-8 encoded hard space in first argument of clisp! invocation.
	* _clisp.c: Treat UTF-8 encoded hard space like ISO-8859-1 encoded hard
	space.

2017-11-18  Bruno Haible  <bruno@clisp.org>

	Allow file names with spaces to be passed as first argument to 'clisp'.
	Reported by Jean Louis <bugs@gnu.support>
	at <https://sourceforge.net/p/clisp/bugs/699/>.
	* _clisp.c: Disable the argv[1] splitting hack unless SHEBANG_SUPPORT
	is defined.
	* _distmakefile: Install a program 'clisp!' next to 'clisp'.