@@ -2,16 +2,16 @@
 
            .text
 
-           .globl getSP
-           .globl setSP
+           .globl asm_getSP
+           .globl asm_setSP
 
-!    extern void* getSP (void);
-getSP:     lea sp@(4),a0   ! aktueller Wert von SP + 4 wegen Unterprogrammaufruf
+!    extern void* asm_getSP (void);
+asm_getSP: lea sp@(4),a0   ! aktueller Wert von SP + 4 wegen Unterprogrammaufruf
            movel a0,d0     ! in D0 = Ergebnisregister
            rts
 
-!    extern void setSP (void* sp_init_address);
-setSP:     movel sp@+,a0   ! Returnadresse nach A0
+!    extern void asm_setSP (void* sp_init_address);
+asm_setSP: movel sp@+,a0   ! Returnadresse nach A0
            movel sp@,sp    ! SP auf den übergebenen Wert setzen
            jmp a0@         ! zurückspringen
 
